--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
     "rimraf": "^3.0.2",
     "simple-git": "^2.4.0"
